[package]
name = "tv-controls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tv-controls"
path = "src/main.rs"
test = false
doctest = false
bench = false


[dependencies]
# usbd-human-interface-device = "0.5.0"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
# rp-pico = "0.9"
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
#  rp2040-boot2 = "0.3"
# cortex-m-rtic = "1.1"
# cortex-m = {version = "0.7"}
# cortex-m-rt = "0.7"

# embedded-hal = { version = "1.0" }
# fugit = "0.3"
# usb-device = "0.3"

usbd-human-interface-device = { git="https://github.com/dlkj/usbd-human-interface-device"}
usb-device = "0.3"
packed_struct = { version = "0.10", default-features = false }
frunk = { version = "0.4", default-features = false }
fugit = "0.3"
cortex-m-rtic = "1.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.9"
rp2040-hal = "0.10"

rotary-encoder-embedded = "0.3.1"



# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
